assets/base.css
:root {
  /* paddings of touchscreen devices with a notch */
  --safe-area-top: env(safe-area-inset-top);
  --safe-area-right: env(safe-area-inset-right);
  --safe-area-bottom: env(safe-area-inset-bottom);
  --safe-area-left: env(safe-area-inset-left);

  /* Sizes */
  --max-width: 1440px;
  --max-width-narrow: 770px;
  --horizontal-padding: 64px;
  --horizontal-padding-mobile: 16px;
  --button-margin-bottom: 16px;
  --date-picker-height-mobile: 68px;

  /* Carousel */
  --slide-width: 332px;
  --slide-width-mobile: 264px;
  --thumbnail-size: 92px;
  --title-max-width: 352px;

  /* Colors */
  --color-azureish-white: #D7E2FF;
  --color-begonia: #FF6E6E;
  --color-black: #1A3333;
  --color-black-08: #1A333314;
  --color-green: #51C234;
  --color-red: #C23434;
  --color-red-light: #F5CFCF;
  --color-white: #FFFFFF;
  --color-white-90: #FFFFFFE6;

  /* Border radius */
  --border-radius-circle: 50%;
  --border-radius-none: 0;

  /* Font weights */
  --font-weight-light: 300;
  --font-weight-regular: 400;
  --font-weight-medium: 500;
  --font-weight-semibold: 600;
  --font-weight-bold: 700;
  --font-weight-extrabold: 800;

  /* Line heights */
  --line-height-xs: 1;
  --line-height-sm: 1.2;
  --line-height-md: 1.3333;
  --line-height-lg: 1.5;
  --line-height-xl: 2;

  /* Transitions */
  --transition-function-linear: linear;
  --transition-function-ease: ease;
  --transition-function-ease-in: ease-in;
  --transition-function-ease-out: ease-out;
  --transition-function-ease-in-out: ease-in-out;

  /* Shadows */
  --shadow-xxs: 0px 1px 2px rgba(0, 0, 0, 0.0005);
  --shadow-xs: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.06);
  --shadow-sm: 0px 4px 8px -2px rgba(0, 0, 0, 0.1), 0px 2px 4px -2px rgba(0, 0, 0, 0.06);
  --shadow-md: 0px 12px 16px -4px rgba(0, 0, 0, 0.08), 0px 4px 6px -2px rgba(0, 0, 0, 0.03);
  --shadow-lg: 0px 20px 24px -4px rgba(0, 0, 0, 0.08), 0px 8px 8px -4px rgba(0, 0, 0, 0.03);
  --shadow-xl: 0px 24px 48px -12px rgba(0, 0, 0, 0.18);
  --shadow-xxl: 0px 32px 64px -12px rgba(0, 0, 0, 0.14);
}

*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

*:not(i),
*:not(i)::before,
*:not(i)::after {
  font-family: var(--font-body);
}

* {
  scrollbar-width: thin;
  scrollbar-color: transparent transparent;
}

*::-webkit-scrollbar,
body::-webkit-scrollbar {
    width: 0;
    height: 0;
}

*::-webkit-scrollbar-track,
*::-webkit-scrollbar-thumb {
  background: transparent;
}

html {
  overflow-x: clip;
  height: 100%;
  padding: env(safe-area-inset);
}

.touch {
  -webkit-text-size-adjust: 100%;
}

body {
  background: var(--background-primary);
  color: var(--color-primary);
  font-size: var(--font-size-regular);
  font-weight: var(--font-weight-regular);
  line-height: var(--line-height-lg);
  display: flex;
  flex-direction: column;
  min-height: 100%;
  width: 100%;
  overflow-x: clip;
}

body > * {
  flex: 0 0 auto;
}

:is(body):has(.footer > .container) {
  position: relative;
}

#main {
  flex: 1 1 auto;
}

#main:has(section:only-child) {
  display: flex;
  flex-direction: column;
}

#main:has(section:only-child) > * {
  width: 100%;
}

#main > section:only-child {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}

.header-sticky:not(.header-transparent) ~ #main,
.preview-bar__container ~ .header-sticky:not(.header-transparent) ~ #main {
  padding-top: var(--header-height, 114px);
}

.header-sticky.header-transparent ~ #main {
  padding-top: var(--top-bar-height, 39px);
}

.preview-bar__container ~ .header-sticky.header-transparent ~ #main {
  padding-top: calc(var(--top-bar-height, 39px) + var(--preview-height, 72px));
}

.header-menu-opened ~ #main {
  margin-top: var(--preview-height);
  padding-top: var(--header-height);
}

.header-menu-opened.header-transparent ~ #main {
  padding-top: var(--top-bar-height);
}

.preview-bar__container {
  z-index: 1002 !important;
}

.header-with-date-picker ~ #main > section:first-child [class^="padding-top"],
.header-with-date-picker ~ #main > section:first-child [class*="padding-top"] {
  padding-top: calc(var(--padding-top-mobile, 0px) + var(--date-picker-height-mobile));
}

.header-transparent ~ #main:has(section:first-child > .container) {
  padding-top: var(--header-height, 114px);
}

.header-transparent ~ #main > section:first-child [class^="padding-top"],
.header-transparent ~ #main > section:first-child [class*="padding-top"] {
  padding-top: calc(var(--padding-top-mobile, 0px) + var(--header-height, 75px) - var(--top-bar-height, 0px));
}

.header-with-date-picker.header-transparent ~ #main > section:first-child [class^="padding-top"],
.header-with-date-picker.header-transparent ~ #main > section:first-child [class*="padding-top"] {
  padding-top: calc(var(--padding-top-mobile, 0px) + var(--header-height, 75px) - var(--top-bar-height, 0px) + var(--date-picker-height-mobile));
}

@media (min-width: 992px) {
  .header-with-date-picker ~ #main > section:first-child [class^="padding-top"],
  .header-with-date-picker ~ #main > section:first-child [class*="padding-top"] {
    padding-top: var(--padding-top, 0px);
  }

  .header-transparent ~ #main > section:first-child [class^="padding-top"],
  .header-transparent ~ #main > section:first-child [class*="padding-top"],
  .header-with-date-picker.header-transparent ~ #main > section:first-child [class^="padding-top"],
  .header-with-date-picker.header-transparent ~ #main > section:first-child [class*="padding-top"] {
    padding-top: calc(var(--padding-top, 0px) + var(--header-height, 75px) - var(--top-bar-height, 0px));
  }
}

h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
  font-family: var(--font-heading);
  font-weight: var(--font-weight-extrabold);
  margin-bottom: 1.5625rem;
  letter-spacing: -1px;
  line-height: var(--line-height-xs);
  color: var(--color-primary);
}

h1, .h1 {
  font-size: var(--font-size-h1);
  line-height: 0.9;
}

h2, .h2 {
  font-size: var(--font-size-h2);
  letter-spacing: -0.8px;
}

h3, .h3 {
  font-size: var(--font-size-h3);
  line-height: var(--line-height-sm);
  letter-spacing: -0.6px;
}

h4, .h4 {
  font-size: 40px;
  line-height: var(--line-height-md);
  letter-spacing: -0.5px;
  font-weight: var(--font-weight-bold);
}

h5, .h5 {
  font-size: 24px;
  line-height: 1.4;
  letter-spacing: -0.3px;
  font-weight: var(--font-weight-bold);
}

h6, .h6 {
  font-size: 20px;
  line-height: var(--line-height-sm);
  letter-spacing: 2px;
  font-weight: var(--font-weight-medium);
}

a {
  display: inline-block;
  vertical-align: top;
  color: inherit;
  text-decoration: none;
  transition: all var(--animation-duration) var(--transition-function-ease-in-out);
}

ul, ol {
  padding: 0;
  margin: 0;
}

ul {
  list-style: none;
}

input, textarea {
  font-family: var(--font-body);
  border-radius: var(--border-radius-rounded);
}

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus
input:-webkit-autofill:active,
textarea:-webkit-autofill,
textarea:-webkit-autofill:hover
textarea:-webkit-autofill:focus,
textarea:-webkit-autofill:active {
  -webkit-box-shadow: 0 0 0 1000px transparent inset !important;
  -webkit-background-clip: text !important;
  background-clip: text !important;
  color: var(--color-primary) !important;
  -webkit-text-fill-color: var(--color-primary) !important;
}

img {
  display: block;
  height: auto;
  max-width: 100%;
}

.text-large {
  font-size: var(--font-size-large);
  line-height: var(--line-height-lg);
}

.text-regular {
  font-size: var(--font-size-regular);
  line-height: var(--line-height-lg);
}

.text-center {
  text-align: center;
}

.text-weight--light {
  font-weight: var(--font-weight-light);
}

.text-weight--regular {
  font-weight: var(--font-weight-regular);
}

.text-weight--medium {
  font-weight: var(--font-weight-medium);
}

.text-weight--semibold {
  font-weight: var(--font-weight-semibold);
}

.text-weight--bold {
  font-weight: var(--font-weight-bold);
}

.text-weight--extrabold {
  font-weight: var(--font-weight-extrabold);
}

.button {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  font-family: var(--font-body);
  font-size: var(--font-size-regular);
  font-weight: var(--font-weight-extrabold);
  line-height: var(--line-height-xs);
  color: currentColor;
  border: 1px solid transparent;
  border-radius: var(--border-radius);
  background: none;
  cursor: pointer;
  margin-bottom: var(--button-margin-bottom);
  transition: all var(--animation-duration) var(--transition-function-ease-in-out);
}

.button.button--primary {
  color: var(--color-accent);
  background: var(--background-accent);
  border-color: var(--background-accent);
}

.button.button--primary:hover {
  background: var(--background-accent-hover);
  border-color: var(--background-accent-hover);
}

.button.button--secondary {
  color: var(--color-outline);
}

.button.button--secondary:hover {
  opacity: 0.8;
}

.button.button--outlined {
  color: currentColor;
  border-color: var(--background-accent);
}

.button.button--outlined:hover {
  background: var(--background-accent-hover-2);
}

.button svg {
  margin-left: 17px;
}

.button path {
  fill: var(--color-outline);
  transition: all var(--animation-duration) var(--transition-function-ease-in-out);
}

.button.button--small {
  padding: 8px 20px;
}

.button.button--large {
  padding: 16px 24px;
}

.container {
  width: 100%;
  max-width: var(--max-width);
  margin: 0 auto;
  padding: 0 var(--horizontal-padding-mobile);
}

.touch[data-orientation='landscape'] .container {
  padding-left: calc(44px + var(--horizontal-padding-mobile));
  padding-right: calc(44px + var(--horizontal-padding-mobile));
}

@media (min-width: 1200px) {
  .container {
    padding: 0 var(--horizontal-padding);
  }
}

.overflow-hidden {
  overflow: hidden;
}

.tagline {
  display: inline-block;
  vertical-align: top;
  font-family: var(--font-tagline);
  font-weight: var(--font-weight-medium);
  line-height: var(--line-height-sm);
  font-size: var(--font-size-tagline);
  letter-spacing: 1px;
  margin: 0 0 16px;
  color: var(--color-outline);
}

@media (min-width: 1100px) {
  .tagline {
    margin: 0 0 24px;
  }
}

.tippy-box *:not(label),
.bq-modal *:not(label) {
  border-radius: var(--border-radius-rounded) !important;
}

@media (min-width: 576px) {
  div[data-tippy-root]:has([data-tid="Mini cart"]) {
    margin: var(--header-height) var(--horizontal-padding-mobile) !important;
    transform: translate(0, 0) !important;
    right: 0 !important;
    transition: all var(--animation-duration) var(--transition-function-ease-in-out);
  }

  body:has(.header-sticky) div[data-tippy-root]:has([data-tid="Mini cart"]) {
    position: fixed !important;
    top: var(--header-height) !important;
    right: var(--horizontal-padding-mobile) !important;
    margin: 0 !important;
    transform: translate(0, 0) !important;
  }

  .scrolled-down:has(.header-sticky) div[data-tippy-root]:has([data-tid="Mini cart"]) {
    top: calc(var(--header-height) + var(--header-transform, 0)) !important;
  }
}

@media (min-width: 1200px) {
  div[data-tippy-root]:has([data-tid="Mini cart"]) {
    margin: var(--header-height) var(--horizontal-padding) !important;
  }

  body:has(.header-sticky) div[data-tippy-root]:has([data-tid="Mini cart"]) {
    right: var(--horizontal-padding) !important;
  }
}

@media (min-width: 1440px) {
  div[data-tippy-root]:has([data-tid="Mini cart"]) {
    margin: var(--header-height) 0 !important;
    transform: translate(-19%, 0) !important;
    right: calc(50% - var(--max-width) / 2) !important;
  }

  body:has(.header-sticky) div[data-tippy-root]:has([data-tid="Mini cart"]) {
    right: calc(50% - var(--max-width) / 2 + var(--horizontal-padding)) !important;
  }
}

